demo/shop-ingress-demo/ingress/ingress-shop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shop
  namespace: shop
spec:
  ingressClassName: nginx
  rules:
    - host: customer.myshop.local
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-svc
                port:
                  number: 80
          - path: /orders 
            pathType: Prefix 
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-customer
                port:
                  number: 80
    - host: admin.myshop.local
      http:
        paths:
          - path: /reports 
            pathType: Prefix 
            backend:
              service:
                name: report-svc 
                port: 
                  number: 80
          - path: /users
            pathType: Prefix 
            backend:
              service:
                name: frontend-admin 
                port:
                  number: 80
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: frontend-admin 
                port:
                  number: 80
